--- a/reverse-it/style.css
+++ b/reverse-it/style.css
@@ -72,3 +72,13 @@ body {
 .card_input:focus + .result__label::after, .result__label:valid + .result__label::after {
     transform: translateY(0%);
 }
+
+.result {
+    width: 80%;
+    font-weight: 700;
+    font-size: 32px;
+    color: rgb(126, 43, 70);
+    border: 2px solid #333;
+    padding: 30px;
+    border-radius: 50px;
+}
